tests/macros/expand/validate_async.rs
fn main() {
    let q = inquisition::questions![Expand { async validate: todo!() }];
}
